# aue-component-editor

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  models.rs  routes.rs
src/api/: mod.rs
test-resources/: component-definition.json  component-filters.json  component-models.json
