[package]
name = "aue-component-editor"
version = "0.1.0"
edition = "2021"

[profile.release]
# strip = true
codegen-units = 1
opt-level = "z"
lto = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws", "http2", "multipart", "macros"]}
axum-extra = { version = "0.9.2", features = ["cookie", "json-deserializer"] }
bytes = { version = "1.4.0", default-features = false }
dotenvy = "0.15.6"
env_logger = { version = "0.11", default-features = false }
juniper_graphql_ws = "0.3.0"
juniper = { git = "https://github.com/graphql-rust/juniper", features = ["chrono", "bson"], default-features = false }
juniper_axum = { git = "https://github.com/graphql-rust/juniper", features = ["subscriptions"] }
log = "0.4"
serde_json = { version = "1.0.89", default-features = false }
serde = { version = "1.0.95", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "compression-gzip", "compression-zstd", "compression-deflate", "full"] }
tracing-subscriber = "0.3.18"
tracing = "0.1"
http = "1"
hashbrown = { version = "0.14.3", features = ["serde"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
